# magenta-rt

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.arm64  Dockerfile.finetune_arm64  Dockerfile.finetune_x86  Dockerfile.x86  FINETUNE_README.md  README.md  app.py  documentation.html  env.example  jam_worker.py  magentaRT_rt_tester.html  magenta_prompts.js  model_management.py  one_shot_generation.py  prepare_data.py  pyproject.toml  train.py  utils.py
docs/: about_status.md  api_http.md  api_websocket.md  changelog.md  performance.md
notebooks/: Magenta_RT_Finetune.ipynb
